fix: scroll button not visible

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -149,3 +149,22 @@ h3 {
   font-size: 20px;
   font-weight: 600;
 }
+
+.user-menu-button {
+  padding: 0;
+  border: none;
+  width: 64px;
+  height: 64px;
+  position: fixed;
+  bottom: 40px;
+  right: 50px;
+  z-index: 100;
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
+  filter: brightness(0.8);
+}
+
+.user-menu-button:hover {
+  transform: scale(1.15);
+  filter: brightness(1);
+}
